--- a/src/aura/migrationStep/migrationStep.cmp
+++ b/src/aura/migrationStep/migrationStep.cmp
@@ -48,7 +48,7 @@
                 <aura:iteration items="{!v.migrations}" var="i">
                     <tr>
                         <td data-label="Name">
-                            <div class="slds-truncate" title="{!i.Id}">{!i.Name}</div>
+                            <div class="slds-truncate" title="{!i.Id}"><a href="{!'/' + i.Id}">{!i.Name}</a></div>
                         </td>
                         <td data-label="Start Date">
                             <div class="slds-truncate"><lightning:formattedDateTime value="{!i.StartDate__c}" year="numeric" month="numeric" day="numeric"  hour="2-digit" minute="2-digit" timeZoneName="short" /></div>
