--- a/src/aura/MigrationWizardComponent/MigrationWizardComponent.cmp
+++ b/src/aura/MigrationWizardComponent/MigrationWizardComponent.cmp
@@ -406,7 +406,7 @@
                             </fieldset>
                         </aura:renderIf>
                     </c:migrationStep>
-                    <c:migrationStep label="Interactions" class="{!v.privateActiveObject == 'Interactions' ? 'slds-show' : 'slds-hide'}" onsubmit="{!c.createMigration}" migrations="{!v.privateInteractionObjects}" disabled="{!v.privateMigrationButtonDisabled}">
+                    <c:migrationStep label="Interactions" class="{!v.privateActiveObject == 'Interactions' ? 'slds-show' : 'slds-hide'}" onsubmit="{!c.createMigration}" migrations="{!v.privateInteractionObjects}" disabled="{!v.privateMigrationButtonDisabled}" showBulk="false">
                         <p>In this step, you will be able to migrate cases interactions from Desk.com to Service Cloud. You can either select to migrate all data or select data range for the migration.</p>
                         <lightning:select aura:id="InteractionsInput" name="interactionDataSet" label="Data Set" value="{!v.privateInteractionDataSet}" required="true">
                             <option value="">-- Please Select --</option>
@@ -423,7 +423,7 @@
                             </fieldset>
                         </aura:renderIf>
                     </c:migrationStep>
-                    <c:migrationStep label="Attachments" class="{!v.privateActiveObject == 'Attachments' ? 'slds-show' : 'slds-hide'}" onsubmit="{!c.createMigration}" migrations="{!v.privateAttachmentObjects}" disabled="{!v.privateMigrationButtonDisabled}">
+                    <c:migrationStep label="Attachments" class="{!v.privateActiveObject == 'Attachments' ? 'slds-show' : 'slds-hide'}" onsubmit="{!c.createMigration}" migrations="{!v.privateAttachmentObjects}" disabled="{!v.privateMigrationButtonDisabled}" showBulk="false">
                         <p>In this step, you will be able to migrate cases attachments from Desk.com to Service Cloud. These attachments will exist in Salesforce on the case level.</p>
                     </c:migrationStep>
                     <c:migrationStep label="Articles" class="{!v.privateActiveObject == 'Articles' ? 'slds-show' : 'slds-hide'}" onsubmit="{!c.createMigration}" migrations="{!v.privateArticleObjects}" disabled="{!v.privateMigrationButtonDisabled}">
