--- a/src/aura/migrationStep/migrationStep.cmp
+++ b/src/aura/migrationStep/migrationStep.cmp
@@ -11,6 +11,7 @@
     <aura:attribute name="onsubmit" type="Aura.Action" access="public" />
     <aura:attribute name="migrations" type="List" access="public" />
     <aura:attribute name="disabled" type="Boolean" access="public" />
+    <aura:attribute name="showBulk" type="Boolean" access="public" default="true" />
 
     <div class="{!'slds-text-longform ' + v.class}">
         <h1 class="slds-text-heading--large slds-border--bottom">{!v.label}</h1>
@@ -39,9 +40,11 @@
                     <th scope="col">
                         <div class="slds-truncate" title="Records Total">Records Total</div>
                     </th>
-                    <th scope="col">
-                        <div class="slds-truncate" title="Bulk Job">Bulk Job</div>
-                    </th>
+                    <aura:renderIf isTrue="{!v.showBulk}">
+                        <th scope="col">
+                            <div class="slds-truncate" title="Bulk Job">Bulk Job</div>
+                        </th>
+                    </aura:renderIf>
                 </tr>
                 </thead>
                 <tbody>
@@ -59,13 +62,15 @@
                         <td data-label="Records">
                             <div class="slds-truncate">{!i.RecordsTotal__c}</div>
                         </td>
-                        <td data-label="Bulk Job Link">
-                            <div class="slds-truncate">
-                                <aura:renderIf isTrue="{!i.JobId__c.length > 0}">
-                                    <a href="{!'/' + i.JobId__c}">Bulk Job</a>
-                                </aura:renderIf>
-                            </div>
-                        </td>
+                        <aura:renderIf isTrue="{!v.showBulk}">
+                            <td data-label="Bulk Job Link">
+                                <div class="slds-truncate">
+                                    <aura:renderIf isTrue="{!i.JobId__c.length > 0}">
+                                        <a href="{!'/' + i.JobId__c}">Bulk Job</a>
+                                    </aura:renderIf>
+                                </div>
+                            </td>
+                        </aura:renderIf>
                     </tr>
                 </aura:iteration>
                 </tbody>
