--- a/src/aura/migrationStep/migrationStep.cmp
+++ b/src/aura/migrationStep/migrationStep.cmp
@@ -51,7 +51,7 @@
                 <aura:iteration items="{!v.migrations}" var="i">
                     <tr>
                         <td data-label="Name">
-                            <div class="slds-truncate" title="{!i.Id}"><a href="{!'/' + i.Id}">{!i.Name}</a></div>
+                            <div class="slds-truncate" title="{!i.Id}"><a href="{!'/' + i.Id}" target="_blank">{!i.Name}</a></div>
                         </td>
                         <td data-label="Start Date">
                             <div class="slds-truncate"><lightning:formattedDateTime value="{!i.StartDate__c}" year="numeric" month="numeric" day="numeric"  hour="2-digit" minute="2-digit" timeZoneName="short" /></div>
@@ -66,7 +66,7 @@
                             <td data-label="Bulk Job Link">
                                 <div class="slds-truncate">
                                     <aura:renderIf isTrue="{!i.JobId__c.length > 0}">
-                                        <a href="{!'/' + i.JobId__c}">Bulk Job</a>
+                                        <a href="{!'/' + i.JobId__c}" target="_blank">Bulk Job</a>
                                     </aura:renderIf>
                                 </div>
                             </td>
