migrate data set

--- a/src/aura/MigrationWizardComponent/MigrationWizardComponent.cmp
+++ b/src/aura/MigrationWizardComponent/MigrationWizardComponent.cmp
@@ -321,7 +321,7 @@
                                 <legend class="slds-form-element__legend slds-form-element__label">Data Set Selection</legend>
                                 <div class="slds-form--inline">
                                     <lightning:input aura:id="AccountsInput" type="date" name="accountStartDate" label="Start Date" value="{!v.privateAccountStartDate}" disabled="{!v.privateAccountStartId}" />
-                                    <!--<lightning:input aura:id="AccountsInput" type="number" name="accountStartId" label="Start Id" value="{!v.privateAccountStartId}" disabled="{!v.privateAccountStartDate}" /> -->
+                                    <lightning:input aura:id="AccountsInput" type="number" name="accountStartId" label="Start Id" value="{!v.privateAccountStartId}" disabled="{!v.privateAccountStartDate}" />
                                 </div>
                             </fieldset>
                         </aura:renderIf>
